tests/files/lexer_tests/should_fail/040.cmdr
// Illegal character in variable name (ascii 7)
myvar = 7;